--- a/v1/src/Template.Infrastructure/Template.Infrastructure.csproj
+++ b/v1/src/Template.Infrastructure/Template.Infrastructure.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FM.Application\Template.Application.csproj" />
+    <ProjectReference Include="..\Template.Application\Template.Application.csproj" />
   </ItemGroup>
 
 </Project>
