--- a/v1/src/Template.Api/Template.Api.csproj
+++ b/v1/src/Template.Api/Template.Api.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FM.Application\Template.Application.csproj" />
-    <ProjectReference Include="..\FM.Infrastructure\Template.Infrastructure.csproj" />
+    <ProjectReference Include="..\Template.Application\Template.Application.csproj" />
+    <ProjectReference Include="..\Template.Infrastructure\Template.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
