--- a/v1/src/Template.Application/Template.Application.csproj
+++ b/v1/src/Template.Application/Template.Application.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FM.Domain\Template.Domain.csproj" />
+    <ProjectReference Include="..\Template.Domain\Template.Domain.csproj" />
   </ItemGroup>
 
 </Project>
